# onn-preprocessor

./: README.md  environment.yml  pyproject.toml
examples/: 00_quickstart_llama.py  01_benchmark_no_generation.py  02_benchmark_compression.py  03_benchmark_natural_text.py  04_benchmark_side_by_side.py  05_benchmark_code_side_by_side.py  05_quality_eval_bigdata_side_by_side.py  05_quality_score_bigdata_candidates.py  05_quality_sweep_bigdata_candidates.py  05_quality_sweep_bigdata_candidates_multipass.py  05_quality_sweep_bigdata_candidates_multipass_v2.py  05_quality_sweep_bigdata_candidates_multipass_v3.py  05_quality_sweep_bigdata_candidates_multipass_v4.py  05_quality_sweep_bigdata_candidates_multipass_v5.py  06_benchmark_code_generate.py
src/onnpp/: __init__.py  version.py
src/onnpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/onnpp/api/: preprocessor.py
src/onnpp/core/: compress.py  config.py  featurizer.py  projector.py
src/onnpp/hf/: __init__.py  llama_hook.py  utils.py
src/onnpp/operators/: l2_policy.py  l4_mask.py
